# tftools

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
dataset/: 1.xml  2.xml  3.xml  4.xml  5.xml  6.xml
python/: README.md  generate_tfrecord.py  inspect_tfrecord.py  xml_to_csv.py
src/: cli.rs  main.rs  math.rs
src/pascal_voc/: label_map.rs  mod.rs  parser.rs  tfrecord.rs
src/pascal_voc/features/: mod.rs  prepare.rs
src/tensorflow_protos/: mod.rs
