[package]
name = "tftools"
version = "0.1.0"
authors = ["Bertrand \"Kamek\" Bousquet <b.kamek@gmail.com>"]
edition = "2018"

[dependencies]
protobuf = "2.8.0"
quick-xml = { version = "0.18.1", features = ["serialize"] }
serde = { version = "1.0.106", features = ["derive"] }
thiserror = "1.0.14"
tensorflow = "0.15.0"
walkdir = "2.3.1"
structopt = "0.3.13"
crc = "1.8.1"

[build-dependencies]
protoc-rust = "2.8.0"
